--- a/loginPage.css
+++ b/loginPage.css
@@ -8,3 +8,11 @@ body {
     min-height: 100vh;
     display: flex;
 }
+
+#div-left {
+    width: 100vh;
+    background-color: #fff;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
