add style for div right

--- a/loginPage.css
+++ b/loginPage.css
@@ -16,3 +16,8 @@ body {
     justify-content: center;
     align-items: center;
 }
+
+#div-right {
+    width: 100vh;
+    background-color: orange;
+}
