--- a/loginPage.css
+++ b/loginPage.css
@@ -29,3 +29,38 @@ body {
     display: flex;
     flex-direction: column;
 }
+
+#input-username {
+    width: 40vh;
+    height: 5vh;
+    margin-left: 5vh;
+    margin-top: 2vh;
+    margin-bottom: 2vh;
+    border: 0;
+    outline: 0;
+    border-radius: 10px;
+    padding: 0 10px;
+    font-size: 1.3rem;
+    box-shadow: 0 1px 5px #ccc;
+    font-family: inputfont;
+}
+
+@font-face {
+    font-family: inputfont;
+    src: url(Lalezar-Regular.ttf);
+}
+
+#input-password {
+    width: 40vh;
+    height: 5vh;
+    margin-left: 5vh;
+    margin-top: 1vh;
+    margin-bottom: 2vh;
+    border: 0;
+    outline: 0;
+    border-radius: 10px;
+    padding: 0 10px;
+    font-size: 1.3rem;
+    box-shadow: 0 1px 5px #ccc;
+    font-family: inputfont;
+}
