--- a/loginPage.css
+++ b/loginPage.css
@@ -77,3 +77,18 @@ body {
     margin-left: 17.5rem;
     border: 0;
 }
+
+#login-btn {
+    width: 40vh;
+    height: 5vh;
+    margin-left: 5vh;
+    margin-top: 2vh;
+    margin-bottom: 2vh;
+    border: 0;
+    outline: 0;
+    border-radius: 10px;
+    background-color: #4CAF50;
+    box-shadow: 0 1px 10px green;
+    font-size: 1.3rem;
+    font-family: inputfont;
+}
