--- a/loginPage.css
+++ b/loginPage.css
@@ -23,17 +23,21 @@ body {
 }
 
 #login {
+    user-select: none;
     width: 50vh;
     height: 50vh;
     background-color: darkcyan;
     display: flex;
     flex-direction: column;
+    border-radius: 10px;
 }
 
 #title {
     font-size: 2.8rem;
     font-family: inputfont;
     text-align: center;
+    margin-bottom: 1.5vh;
+    margin-top: 1vh;
 }
 
 #input-username {
