--- a/loginPage.css
+++ b/loginPage.css
@@ -21,9 +21,10 @@ body {
     user-select: none;
     width: 50vh;
     height: 50vh;
-    background-color: darkcyan;
     display: flex;
     flex-direction: column;
+    box-shadow: 0 1px 5px #ccc,
+    0 0 5px #ccc;
     border-radius: 10px;
 }
 
