add background image to div Right

--- a/loginPage.css
+++ b/loginPage.css
@@ -132,6 +132,7 @@ body {
 
 #div-right {
     width: 100vh;
+    background-image: url(img/coffeAndCookie.jpg);
     background-size: cover;
     background-position: 0 50%;
 }
